cmss/main/default/objects/AssetRelationship/fields/ContractOrder__c.field-meta.xml
<CustomField>
    <fullName>ContractOrder__c</fullName>
    <description>Pořadí smlouvy - plnené len pre RŽP. Pořadí v pojištění (0 = Hlavní smlouva)</description>
    <label>Contract Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>