cmss/main/default/objects/AssetRelationship/fields/IsReleased__c.field-meta.xml
<CustomField>
    <fullName>IsReleased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vyvazován - indikace, zda je role osoby odebírána v rámci změnového návrhu k úvěrovému případu. 
Pokud ano, hodnota ve sloupci je 1, jinak je ve sloupci hodnota 0.</description>
    <label>Is Released</label>
    <type>Checkbox</type>
</CustomField>