cmss/main/default/objects/AssetRelationship/fields/ProductTypeRelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>ProductTypeRelatedAsset__c</fullName>
    <label>Product Type Related Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>