cmss/main/default/objects/AssetRelationship/fields/SystemId__c.field-meta.xml
<CustomField>
    <fullName>SystemId__c</fullName>
    <description>zdrojový systém (SB, CS)</description>
    <label>System Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>